fixed raygun link

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </div>
 
                 <p style="margin-top: 2rem;">
-                    <a href="https://raygun-laser.com" class="cta-button">Learn More About Raygun Laser</a>
+                    <a href="https://www.raygun-laser.com" class="cta-button">Learn More About Raygun Laser</a>
                 </p>
             </div>
         </section>
