added app logos

--- a/index.html
+++ b/index.html
@@ -251,6 +251,11 @@
                 <h3>Raygun Laser</h3>
                 <p>The first truly cross-platform laser light show design software. Built for professionals and enthusiasts alike, Raygun Laser brings a modern workflow and powerful features to laser show creation.</p>
                 
+                <div class="product-variants" style="display: flex; gap: 2rem; justify-content: center; margin: 2rem 0; flex-wrap: wrap;">
+                    <img src="assets/rg-lightpainter-logo.svg" alt="Raygun Light Painter" style="height: 80px; width: auto;">
+                    <img src="assets/rg-livefire-logo.svg" alt="Raygun Live Fire" style="height: 80px; width: auto;">
+                </div>
+                
                 <div class="features-grid">
                     <div class="feature-item">
                         <strong>Cross-Platform</strong>
